# code-generator

./: README.md  crew_runner.py  dag_flow.py  pyproject.toml  requirements.txt  run_pipeline.py  sequence-diagram.mermaid
agents/: ci_docs_agent.py  code_generator_agent.py  ios_structure_planner_agent.py  project_assembler_agent.py  spec_to_json_agent.py
core/: figma_analyzer.py  figma_fetcher.py  markdown_generator.py
